--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "generate-api-key": "^1.0.2",
     "helmet": "^7.0.0",
     "joi": "^17.9.2",
