feed ,view all users, app settings

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/gashie/jobsbackend#readme",
   "dependencies": {
+    "axios": "^1.5.0",
     "bcrypt": "^5.0.1",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.6",
@@ -28,6 +29,7 @@
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "generate-api-key": "^1.0.2",
+    "google-auth-library": "^9.0.0",
     "helmet": "^7.0.0",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.0",
@@ -35,6 +37,8 @@
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "node-device-detector": "^2.0.14",
+    "rss-feed-emitter": "^3.2.3",
+    "rss-url-parser": "^3.0.0",
     "simple-encryptor": "^4.0.0",
     "uuid": "^9.0.0",
     "winston": "^3.9.0",
