--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "homepage": "https://github.com/gashie/jobsbackend#readme",
   "dependencies": {
     "axios": "^1.5.0",
-    "bcrypt": "^5.0.1",
+    "bcrypt": "^5.1.1",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
@@ -36,6 +36,7 @@
     "jwt-decode": "^3.1.2",
     "morgan": "^1.10.0",
     "mysql": "^2.18.1",
+    "mysql2": "^3.6.1",
     "node-device-detector": "^2.0.14",
     "rss-feed-emitter": "^3.2.3",
     "rss-url-parser": "^3.0.0",
