--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "form-data": "^4.0.0",
+    "formdata": "^0.10.4",
     "generate-api-key": "^1.0.2",
     "google-auth-library": "^9.0.0",
     "helmet": "^7.0.0",
