--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "bcrypt": "^5.1.1",
     "colors": "^1.4.0",
     "cookie-parser": "^1.4.6",
+    "cookie-session": "^2.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
+    "express-session": "^1.17.3",
     "form-data": "^4.0.0",
     "formdata": "^0.10.4",
     "generate-api-key": "^1.0.2",
@@ -40,9 +42,12 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.6.1",
     "node-device-detector": "^2.0.14",
+    "passport": "^0.6.0",
+    "passport-facebook": "^3.0.0",
+    "passport-google-oauth20": "^2.0.0",
+    "passport-linkedin-oauth2": "^2.0.0",
+    "passport-twitter": "^0.1.5",
     "pcap": "^3.1.0",
-    "rss-feed-emitter": "^3.2.3",
-    "rss-url-parser": "^3.0.0",
     "simple-encryptor": "^4.0.0",
     "uuid": "^9.0.0",
     "winston": "^3.9.0",
